[gd_scene load_steps=18 format=3 uid="uid://player123"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_player"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_body"]
size = Vector2(20, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sword"]
size = Vector2(30, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hurtbox"]
size = Vector2(18, 38)

[sub_resource type="SpriteFrames" id="SpriteFrames_player"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"attack_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"attack_side",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"attack_up",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"fall",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"swim",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"wall_slide",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_water"]
radius = 10.0

[sub_resource type="Animation" id="Animation_idle"]
resource_name = "idle"
length = 0.5
loop_mode = 1

[sub_resource type="Animation" id="Animation_flinch"]
resource_name = "flinch"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.5, 0.5, 1), Color(1, 1, 1, 1), Color(1, 0.5, 0.5, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1"]
_data = {
"flinch": SubResource("Animation_flinch"),
"idle": SubResource("Animation_idle")
}

[node name="Player" type="CharacterBody2D"]
collision_layer = 1
collision_mask = 2
script = ExtResource("1_player")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_body")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_player")
animation = &"idle"

[node name="VisualBody" type="ColorRect" parent="."]
offset_left = -10.0
offset_top = -20.0
offset_right = 10.0
offset_bottom = 20.0
color = Color(0.3, 0.5, 0.9, 1)

[node name="VisualHead" type="ColorRect" parent="."]
offset_left = -8.0
offset_top = -28.0
offset_right = 8.0
offset_bottom = -20.0
color = Color(0.9, 0.75, 0.6, 1)

[node name="SwordHitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 5
position = Vector2(25, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwordHitbox"]
shape = SubResource("RectangleShape2D_sword")
disabled = true

[node name="SwordVisual" type="ColorRect" parent="SwordHitbox"]
offset_left = -15.0
offset_top = -3.0
offset_right = 15.0
offset_bottom = 3.0
color = Color(0.8, 0.8, 0.9, 1)

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("RectangleShape2D_hurtbox")

[node name="WallCheckLeft" type="RayCast2D" parent="."]
target_position = Vector2(-15, 0)
collision_mask = 2

[node name="WallCheckRight" type="RayCast2D" parent="."]
target_position = Vector2(15, 0)
collision_mask = 2

[node name="WaterCheck" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="WaterCheck"]
shape = SubResource("CircleShape2D_water")

[node name="SurfaceCheck" type="RayCast2D" parent="."]
target_position = Vector2(0, -25)
collision_mask = 64
hit_from_inside = true

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1")
}

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
position_smoothing_speed = 5.0

[connection signal="area_entered" from="SwordHitbox" to="." method="_on_sword_hitbox_area_entered"]
[connection signal="body_entered" from="SwordHitbox" to="." method="_on_sword_hitbox_body_entered"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
